<resources>
    <string name="app_name">Pelada Manager</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_players">Players</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Pelada</item>
        <item>Add Player</item>
        <item>List Players</item>
        <item>Statistics</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_registrar_jogador">Register Player</string>
    <string name="about">About</string>
    <string name="nick">Nick:</string>
    <string name="first_name_player">First Name:</string>
    <string name="last_name_player">Last Name:</string>
    <string name="register_of_player">Register of player</string>
    <string name="id">Id:</string>
    <string name="phone">Phone:</string>
    <string name="email" translatable="false">Email</string>
    <string name="telephone_hint">Telephone</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="lista_de_jogadores">List of Players</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_2">Team 2:</string>
    <string name="team_1">Team 1:</string>
    <string name="first_name">First Name</string>
    <string name="hint_id">Id</string>
    <string name="last_name">Last Name</string>
    <string name="order_by">Order By:</string>
    <string name="name">Name</string>
    <string name="presen_a">Presence</string>
    <string name="start_pelada">Start Pelada</string>
    <string name="sort_teams">Sort Teams</string>
    <string name="add_goal">Add Goal</string>
    <string name="remove_player_team">Remove</string>
    <string name="goals">Goals:</string>
    <string name="loses" translatable="false">L.:</string>
    <string name="end_pelada">End Pelada</string>
    <string name="order_by_defeats">Order By Defeats</string>
    <string name="order_by_nick">Order By Nick</string>
    <string name="order_by_goals">Order By Goals</string>
    <string name="order_by_winrate">Order By Winrate</string>
    <string name="order_by_wins">Order By Wins</string>
    <string name="about_text">This App was developed  by the student Samuel Neves as a work for the CSI489- Mobile Computing class in the Federal
    University of Ouro Preto.</string>
    <string name="exit">Exit</string>
    <string name="login" translatable="false">Login</string>
    <string name="please_insert_your_email">Please insert your email:</string>
    <string name="welcome_to_the_app_pelada_manager">Welcome to the App Pelada Manager</string>
    <string name="please_insert_your_name">Please insert your name:</string>
    <string name="order_by_presence">Order By Presence</string>
    <string name="substitutes">Substitutes:</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="pelada_settings">Pelada Settings</string>
    <string name="select_the_duration_of_the_match">Select the duration of the match:</string>
    <string name="number_of_players_in_each_team">Number of players in each team:</string>
    <string name="winrate" translatable="false">Winrate:</string>
    <string name="tot_games">Tot. Games:</string>
    <string name="w" translatable="false">W.:</string>
    <string name="statistics">Statistics</string>
    <string name="player_removed">Player Removed!</string>
    <string name="team_completed">Time Completo</string>
    <string name="add_player">Add Player</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="draw_game_msg">Hum... Parece que ouve um empate. Utilize a regra Gol de Ouro para determinar o vencedor:</string>
    <string name="gold_goal">Gol de Ouro</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="winner_team_question">O time Vencedor foi o time</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="addGoal">Add Goal</string>
    <string name="add_to_team1">Add to Team 1</string>
    <string name="add_to_team2">Add to Team 2</string>
    <string name="leave">Leave</string>
    <string name="start1">Start</string>
    <string name="continue1">Continue</string>
    <string name="confirm">Confirmar</string>
    <string name="player_not_found">Player Not Found</string>
    <string name="saved_settings">Settings Saved!</string>
    <string name="error_first_name">Please insert your first name</string>
    <string name="error_last_name">Please insert your  last name</string>
    <string name="error_nick_name">Please insert your nick</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_phone">Invalid Phone</string>
    <string name="player_edited">Player  Edited!</string>
    <string name="order_by_total_of_games">Order By Total of Games</string>
</resources>