<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_add_player"
            android:icon="@drawable/ic_register_player"
            android:title="@string/nav_registrar_jogador" />
        <item
            android:id="@+id/nav_list_players"
            android:icon="@drawable/ic_players"
            android:title="@string/nav_players" />

        <item
            android:id="@+id/nav_stats"
            android:icon="@mipmap/ic_stats"
            android:title="@string/statistics" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>
