<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:support="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/order_by_defeats_stat"
        android:title="@string/order_by_defeats"
        support:showAsAction="never"/>
    <item
        android:id="@+id/order_by_goals_stat"
        android:title="@string/order_by_goals"
        support:showAsAction="never"/>
    <item
        android:id="@+id/order_by_nick_stat"
        android:title="@string/order_by_nick"
        support:showAsAction="never"/>

    <item
        android:id="@+id/order_by_winrate_stat"
        android:title="@string/order_by_winrate"
        support:showAsAction="never"/>
    <item
        android:id="@+id/order_by_wins_stat"
        android:title="@string/order_by_wins"
        support:showAsAction="never"/>
</menu>