<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="ufop.br.futmansamuel.fragments.EditPlayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tilIdEdit">

            <EditText
                android:id="@+id/txtEditId"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="4"
                android:hint="@string/hint_id"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFirstNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtEditFirstName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"

                android:hint="@string/first_name"
                android:inputType="textPersonName"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilLastNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtEditLastName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"

                android:hint="@string/last_name"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNickEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtEditNick"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"

                android:hint="Nick"
                android:inputType="textPersonName"

                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmailEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtEditEmail"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="12"
                android:hint="Email"

                android:inputType="textEmailAddress"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPhoneEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtEditTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="12"
                android:hint="@string/telephone_hint"
                android:inputType="phone"

                />


        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            >

            <Button
                android:id="@+id/btnEditSubmit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="159dp"
                android:layout_height="64dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="7dp"
                android:text="@string/submit"
                />

            <Button
                android:id="@+id/btnEditCancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="159dp"
                android:layout_height="64dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="7dp"
                android:text="@string/cancel"
              />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
